Fixed observer character sheet HD bar gap

--- a/src/scss/quadrone/actors.scss
+++ b/src/scss/quadrone/actors.scss
@@ -1650,6 +1650,8 @@
       }
 
       .actor-image {
+        max-height: 10rem;
+        max-width: 10rem;
         position: relative;
 
         &.square {
